--- a/style.css
+++ b/style.css
@@ -28,14 +28,16 @@ body {
 
 #footer {
   text-align: center;
-  background-color: lightblue;
-  color: black;
+  background-color: grey;
   position: absolute;
   height: 100px;
-  padding: 10px;
+  padding: 30px;
   bottom: 0;
   width: 100%;
   clear: both;
+  border-top-color: black;
+  border-top-width: 2px;
+  border-top-style: solid;
 }
 
 
