--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ body {
   right: auto;
   /*text-align: start; Somehow not working*/ 
   color: #CFCFCF; 
-  font-size: small;
-  font-style: oblique;
+  font-size: 16px;
   font-family:'Avenir LT W01 45 Book';
 
 }
