First Version going live

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ a:active {
 /* This affects the style of projects on the project page
 ------------------------------------------------------ */
 .project_header {
-  color:  grey;
+  color:  black;
   /* Let's put some nice font later */
 }
 
