--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ body {
 }
 
 .clickable_project:hover {
-  border-color: red;
+  border: 2px red solid;
+  background-color: whitesmoke;
+  cursor: pointer;
 }
 
 .clickable_image {
